--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       // 4. ONNXモデル推論
       const tensor = new ort.Tensor("float32", input, [1, 3, 112, 112]);
       const outputs = await session.run({ data: tensor });
-      let emb = outputs['fc1'] || Object.values(outputs)[0]; // モデルにより名前違う場合あり
+      let emb = outputs['embedding'] || Object.values(outputs)[0]; // モデルにより名前違う場合あり
       // 5. 正規化（単位ベクトル化）
       const norm = Math.sqrt(emb.data.reduce((s,v) => s+v*v, 0));
       const vec = emb.data.map(v => v/norm);
