--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>ArcFace 512D 顔認識デモ</title>
+  <title>ArcFace 512D 1顔認識デモ</title>
   <style>
     body { font-family: sans-serif; text-align: center; margin: 0; background: #f7f7f7; }
     h2 { margin-top: 24px; }
@@ -15,7 +15,7 @@
   </style>
 </head>
 <body>
-  <h2>ArcFace 512D 顔認識デモ</h2>
+  <h2>ArcFace 512D 1顔認識デモ</h2>
   <div id="controls">
     <input type="file" id="photoUpload" accept="image/*" />
     <input type="text" id="nameInput" placeholder="名前を入力" />
@@ -73,7 +73,10 @@
         }
       }
       const tensor = new ort.Tensor("float32", input, [1, 3, 112, 112]);
-      const outputs = await session.run({ data: tensor });
+      const feeds = {};
+feeds['input.1'] = tensor; // モデルの実際の入力名に合わせる
+const outputs = await session.run(feeds);
+
       // ★出力keyをconsoleで必ず確認
       console.log("ONNX outputs keys:", Object.keys(outputs));
       let emb =
