--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <script src="https://cdn.jsdelivr.net/npm/onnxruntime-web/dist/ort.min.js"></script>
   <script type="module">
     // パスは自分のGitHubリポジトリ/model以下に置いたONNX名に合わせる
-    const ARC_ONNX_URL = "./model/w600k_mbf.onnx";
+    const ARC_ONNX_URL = "./w600k_mbf.onnx";
     const video128 = document.getElementById('video128');
     const overlay128 = document.getElementById('overlay128');
     const ctx128 = overlay128.getContext('2d');
